# Nix-Operator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: request_payload_template.json
include/: CurlWrapper.h  Main.h  NixSearch_SearchDAO.h  RepositoryFactory.h  SearchDAO.h  SearchRepository.h  SimpleCache.h  TypeConverter.h  Utils.h
include/entities/: CommonEntity.h  Package.h
old/: cache.c  cache.h  common.h  err_codes.h  hashtable.c  hashtable.h  json_schemas.c  json_schemas.h  komihash.h  main_menu.c  main_menu.h  search_repository.c  search_repository.h  search_repository_op.h  stringplus.h
src/: Cache.cpp  Cache.h  Config.cpp  Config.h  CurlWrapper.cpp  Main.cpp  Main.h  NixSearch_SearchDAO.cpp  Package.cpp  RepositoryFactory.cpp  SearchRepository.cpp  SimpleCache.cpp  SourceHandler.cpp  SourceHandler.h  TypeConverter.cpp  Utils.cpp  Utils.h
src/entities/: NixPackagePrefix.h
src/network/: Common.h  CurlWrapper.cpp  CurlWrapper.h  RepositoryCache.cpp  RepositoryCache.h  SourceFetch.cpp  SourceFetch.h
vendors/: CMakeLists.txt
